--- a/index.html
+++ b/index.html
@@ -12,29 +12,32 @@
 
   
  <div class="container w-100 m-auto">
- 
     <div class="row w-100 m-auto">
-
-   <div class="col-md-6">
+   <div class="col-md-6 text-center">
        <h1>left-side</h1>
        
-   <div class="input-group mb-3 w-100 m-auto text-center">
+   <div class="input-group mb-3">
     <input id="input-box" type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
     <span onclick="allPlayers()" class="input-group-text" id="search-btn">Search</span>
   </div>
    </div>
 
+     <img id="sppiner" src="./images/spinnervlll.gif" alt="">
+
    <div id="player-container" class="players-container">
-   
    </div>
 
-   <div class="col-md-6">
+   <div class="col-md-6 text-center ">
        <h1>right-side</h1>
-       <div id="details-container" class="details-container">
+       <div class="img-container w-50">
+           <img id="female" class="w-75" src="./images/female.png" alt="">
+           <img id="male" class="w-75" src="./images/male.png" alt="">
 
        </div>
-   </div>
 
+       <div id="details-container" class="details-container">
+       </div>
+   </div>
     </div>
  </div>
 
